apps/gitea/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitea
  labels:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/part-of: gitea
