apps/gitea/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gitea-gateway
  namespace: gitea
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: git.mcagr.com
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: gitea-tls
