apps/gitea/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea
  namespace: gitea
  labels:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/part-of: gitea
spec:
  parentRefs:
    - name: gitea-gateway
      namespace: gitea
      sectionName: https
  hostnames:
    - git.mcagr.com
  rules:
    - backendRefs:
        - name: gitea-http 
          port: 3000
